@@ -1,4 +1,4 @@
-version=0.7.1
+version=0.7.2
 
 dir.build=build
 dir.dist=dist
